# aristotl

./: .gitignore  .powrc  .travis.yml  Dockerfile  Gemfile  LICENSE  Makefile  Procfile  README.md  README.org  Rakefile  TODO.org  app.rb  aristotl.cabal  aristotl.hs  build.boot  cabal.sandbox.config  circle.yml  config.ru  deps.edn  manage.py  output.txt  project.clj  requirements.txt  scrape.rb  shell.nix  shell.py
api/: Makefile
client/: __init__.py  config.py  database.py  fetcher.py  filters.py  models.py  views.py
client/controllers/: entries.py
client/static/: bower.json
client/static/css/: main.css
client/templates/: article.html  articles.html  base.html  home.html  macros.html
common/: create-article-database.sql  sep_enlive.edn  sep_parser.edn
common/sql/: yesql-example.sql
config/: deploy.rb
config/deploy/: production.rb  staging.rb
db/resources/: sep-schema.edn
db/test/: test_article.html
graph/: Dockerfile  build.boot  todo.org
graph/src/: aristotl.clj
public/: .htaccess
public/css/: main.css
public/js/: main.js
server/: aristotl.clj  spider.clj
server/aristotl/: algo.clj  db.clj  discovery.clj  parser.clj  routes.clj  spider.clj
services/citations/: Citation.hs
services/database/: build.boot
src/: micro.clj
src/aristotl/: discovery.clj
src/clojure/: aristotl.clj
src/haskell/: Aristotl.hs
src/micro/: db.clj  routes.clj
test/: aristotl_test.clj  micro_test.clj
test/aristotl/: test_helpers.clj
test/micro/: test_helpers.clj
views/: about.haml  bibliotype.haml  entry.haml  index.haml  layout.haml
(+12 files in other folders)
