name:                aristotl

-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis:            The Philosophy API
homepage:            http://aristotl.co
license:             MIT
license-file:        LICENSE
author:              Ben Sima
maintainer:          bensima@gmail.com
category:            Data
build-type:          Simple

extra-source-files:  README.md
cabal-version:       >=1.10


executable aristotl
  main-is:             aristotl.hs
  build-depends:       base >= 4.7 && < 4.8
                     , hxt == 9.3.1.*
                     , url == 2.1.*
                     , http == 4000.2.19
  hs-source-dirs:      src/haskell
  default-language:    Haskell2010